force-app/main/default/objects/FNS_RateIndex__c/FNS_RateIndex__c.object-meta.xml
<CustomObject>
    <label>Rate Index</label>
    <nameField>
        <displayFormat>R-{000}</displayFormat>
        <label>Rate Index Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Indexes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>