force-app/main/default/objects/FNS_RateIndex__c/fields/FNS_CalcType__c.field-meta.xml
<CustomField>
    <fullName>FNS_CalcType__c</fullName>
    <description>Calculation Type</description>
    <inlineHelpText>Calculation Type</inlineHelpText>
    <label>Calculation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>