force-app/main/default/objects/FNS_RateIndex__c/fields/FNS_IndexBaseRate__c.field-meta.xml
<CustomField>
    <fullName>FNS_IndexBaseRate__c</fullName>
    <description>Base Rate</description>
    <inlineHelpText>Base Rate</inlineHelpText>
    <label>Base Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>