force-app/main/default/objects/FNS_RateIndex__c/fields/FNS_LnFinalRate__c.field-meta.xml
<CustomField>
    <fullName>FNS_LnFinalRate__c</fullName>
    <description>Final Rate</description>
    <inlineHelpText>Final Rate</inlineHelpText>
    <label>Final Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>