force-app/main/default/objects/FNS_RateIndex__c/fields/FNS_LnFinalSpread__c.field-meta.xml
<CustomField>
    <fullName>FNS_LnFinalSpread__c</fullName>
    <description>Final Spread</description>
    <inlineHelpText>Final Spread</inlineHelpText>
    <label>Final Spread</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>