force-app/main/default/objects/FNS_RateIndex__c/fields/FNS_RateType__c.field-meta.xml
<CustomField>
    <fullName>FNS_RateType__c</fullName>
    <description>Rate Type</description>
    <inlineHelpText>Rate Type</inlineHelpText>
    <label>Rate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>