force-app/main/default/objects/FNS_RateIndex__c/fields/FNS_SystemCodeId__c.field-meta.xml
<CustomField>
    <fullName>FNS_SystemCodeId__c</fullName>
    <description>Rate Basis Internal ID</description>
    <inlineHelpText>Rate Basis Internal ID</inlineHelpText>
    <label>Rate Basis Internal ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>