force-app/main/default/objects/FNS_RateIndex__c/fields/FNS_UserCodeDesc__c.field-meta.xml
<CustomField>
    <fullName>FNS_UserCodeDesc__c</fullName>
    <description>Description</description>
    <inlineHelpText>Description</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>