force-app/main/default/objects/FNS_RateIndex__c/fields/FNS_UserCodeId__c.field-meta.xml
<CustomField>
    <fullName>FNS_UserCodeId__c</fullName>
    <description>Rate Index Internal ID</description>
    <inlineHelpText>Rate Index Internal ID</inlineHelpText>
    <label>Rate Index Internal ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>