force-app/main/default/objects/FNS_RateIndex__c/recordTypes/FNS_RateIndex.recordType-meta.xml
<RecordType>
    <fullName>FNS_RateIndex</fullName>
    <active>true</active>
    <label>Rate Index</label>
</RecordType>