force-app/main/default/objects/FNS_RateIndex__c/listViews/FNS_RateIndexes.listView-meta.xml
<ListView>
    <fullName>FNS_RateIndexes</fullName>
    <columns>NAME</columns>
    <columns>FNS_CalcType__c</columns>
    <columns>FNS_IndexBaseRate__c</columns>
    <columns>FNS_SystemCodeDesc__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Rate Indexes</label>
</ListView>